--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unit Converter</title>
+    <title>Distance Converter</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -20,10 +20,11 @@
 
 <body>
     <main>
-        <h1>Unit Converter</h1>
+        <h1>Distance Converter</h1>
 
         <div class="converters">
             <a href="./temperature.html">Temperature</a>
+            <a href="./distance.html">Distance</a>
         </div>
     </main>
 </body>
